; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_max3421-hcd.c_max3421_reset_port.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_max3421-hcd.c_max3421_reset_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_hcd = type { i32 }
%struct.max3421_hcd = type { i32, i32, i32 }

@USB_PORT_STAT_ENABLE = common dso_local global i32 0, align 4
@USB_PORT_STAT_LOW_SPEED = common dso_local global i32 0, align 4
@USB_PORT_STAT_RESET = common dso_local global i32 0, align 4
@RESET_PORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_hcd*)* @max3421_reset_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max3421_reset_port(%struct.usb_hcd* %0) #0 {
  %2 = alloca %struct.usb_hcd*, align 8
  %3 = alloca %struct.max3421_hcd*, align 8
  store %struct.usb_hcd* %0, %struct.usb_hcd** %2, align 8
  %4 = load %struct.usb_hcd*, %struct.usb_hcd** %2, align 8
  %5 = call %struct.max3421_hcd* @hcd_to_max3421(%struct.usb_hcd* %4)
  store %struct.max3421_hcd* %5, %struct.max3421_hcd** %3, align 8
  %6 = load i32, i32* @USB_PORT_STAT_ENABLE, align 4
  %7 = load i32, i32* @USB_PORT_STAT_LOW_SPEED, align 4
  %8 = or i32 %6, %7
  %9 = xor i32 %8, -1
  %10 = load %struct.max3421_hcd*, %struct.max3421_hcd** %3, align 8
  %11 = getelementptr inbounds %struct.max3421_hcd, %struct.max3421_hcd* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, %9
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* @USB_PORT_STAT_RESET, align 4
  %15 = load %struct.max3421_hcd*, %struct.max3421_hcd** %3, align 8
  %16 = getelementptr inbounds %struct.max3421_hcd, %struct.max3421_hcd* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  %19 = load i32, i32* @RESET_PORT, align 4
  %20 = load %struct.max3421_hcd*, %struct.max3421_hcd** %3, align 8
  %21 = getelementptr inbounds %struct.max3421_hcd, %struct.max3421_hcd* %20, i32 0, i32 2
  %22 = call i32 @set_bit(i32 %19, i32* %21)
  %23 = load %struct.max3421_hcd*, %struct.max3421_hcd** %3, align 8
  %24 = getelementptr inbounds %struct.max3421_hcd, %struct.max3421_hcd* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @wake_up_process(i32 %25)
  ret i32 0
}

declare dso_local %struct.max3421_hcd* @hcd_to_max3421(%struct.usb_hcd*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @wake_up_process(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
